--- a/index.html
+++ b/index.html
@@ -46,15 +46,17 @@
        <div class="contents">
          <h1 class="content-title"><span class="content-title-span">//</span>About</h1>
          <p class="title-desc">Things about me which you may find interesting! Explore me...</p>
+         
          <div class="my-details-info">
-           <p class="details">
-            I'm <strong> Sayed Islam</strong> . A professional developer specialized in PHP and Lavascript-based technologies. I Love writing clean and maintainable code for web and mobile applications, passionate about learning and exploring new technologies as well enthusiastic about UI/UX. As of my hobbies, I prefer reading books, travel, and listen to music.
-            <br>
-            <br>
-            Besides these, I'm a Muslim who believes in Allah and the prophet Mohammad.
-           </p>
-           <img class="profile-image" src="image/profile.png" alt="sayed islam safin profile">
-         </div>
+           <div class="details">
+             <p>
+
+             </p>
+           </div>
+           <div class="details">
+            <img src="" alt="">
+           </div>
+          </div>
        </div>
     </main>
 
